# browser-copilot-poc

agent-mcp/: README.md  agent.py  format_converters.py  manifest.json  mcp_client.py  pyproject.toml
